static/css/custom.css
@import url('https://fonts.googleapis.com/css?family=Merriweather:700|PT+Sans:400,400i,700,700i|Source+Code+Pro:400,700');

html {
  font-family: "PT Sans", "Ubuntu Sans", "Liberation Sans", "Lucida Grande", "Helvetica Neue", Arial, sans-serif;
}
@media (min-width: 48em) {
  html {
    font-size: 16px;
  }
}
@media (min-width: 65em) {
  html {
    font-size: 20px;
  }
}

code,pre {
    font-family: "Source Code Pro", "Lucida Console", "Liberation Mono", Menlo, Courier, monospace;
}

.site-title {
  font-family: Merriweather, Georgia, sans-serif;
}

p.caption {
    font-size: 0.95em;
    color: grey;
    font-style: italic;
    text-align: right;
    margin-top: -0.8rem;
}

.figure.thumbnail {
  width: 200px;
  float: left;
  margin-left: 10px;
  border: solid 1px #002b36;
  border-radius: 5px;
  margin-bottom: 10px;
}

.thumbnail > .caption {
  text-align: center;
  margin-bottom: 0px;
}

.content {
  max-width: 45rem;
}

.iframe-container {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  border: #ddd 2px solid;
  box-shadow: #888 0px 5px 8px;
  margin-bottom: 1em;
}
.iframe-container > iframe {
  border: none;
}

a.u-url:hover, .sidebar a:hover {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

code {
  padding: .25em .25em;
  color: #002b36;
  background-color: #f9f9f9;
}
 pre code, pre, code {
   white-space: pre !important;
   word-break: keep-all !important;
   word-wrap: unset !important;
   width: 100%;
   overflow-x: auto !important;
 }

@media (min-width: 48em) {
  html {
    font-size: 16px;
  }
}
@media (min-width: 65em) {
  html {
    font-size: 16px;
  }
}

@media screen and (min-width: 48em) {
  .post-author {
    display: none !important;
  }
}

.talk-table {
  margin-top: 2rem;
  border-collapse: collapse;
  border-spacing: 0;
  border: none;
  vertical-align: top;
  font-size: 1rem;
}

.talk-table td {
  border: 0px;
  padding-top: 0.25em;
  padding-bottom: 0.25em;
}

.talk-table tbody tr td:nth-child(odd) {
  font-weight: bold;
  padding-left: 0px;
  vertical-align: top;
}

.talk-table tbody tr:nth-child(odd) td,
.talk-table tbody tr:nth-child(odd) th {
  background-color: #ffffff;
}

.tomorrow-garrick .sidebar {
  background-color: #373b41; /* tomorrow night selection */
}
.tomorrow-garrick .content a {
  color: #cc6666; /* tomorrow night red */
}

.base16-solarized-garrick .sidebar {
  background-color: #002b36; /* tomorrow night selection */
}
.base16-solarized-garrick .content a {
  color: #dc322f; /* tomorrow night red */
}
.base16-solarized-garrick .content .recent h2 > a {
  color: #002b36;
}
.base16-solarized-garrick .content .recent h2 > a:hover {
  color: rgba(0, 43, 54, 0.75);
  text-decoration: none;
}
.base16-solarized-garrick .post-content a:hover {
  text-decoration: underline dashed;
  text-decoration: none;
  background: #fbeaea;
  padding: 2px;
  margin-left: -2px;
  margin-right: -2px;
}

/* Sidebar collapse */
.sidebar {
  transition: all .1s;
}

.sidebar.collapsed {
  transform: translateX(-100%);
  position: absolute;
}

.container {
  transition: all .1s;
}

.container.expanded {
  margin: auto;
}

.hamburger {
  position: fixed;
  top: 1%;
  left: 1%;
}

.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
  background-color: #f9f9f9;
}

.hamburger-inner.is-active, .hamburger-inner.is-active::before, .hamburger-inner.is-active::after {
  background-color: #002b36;
}

@media screen and (max-width: 767px) {
  .hamburger {
    display: none !important;
  }
}

@media screen and (min-width: 65em) {
  .hamburger.is-active {
    display: none !important;
  }
}

@media screen and (max-width: 48em) {
  .content {
    padding-top: 2em;
  }
  .container.expanded {
    padding-left: 3em;
  }
}

.post-source a {
  color: #de8381 !important;
  font-weight: normal;
}
.post-source {
  margin-top: -16px;
  margin-bottom: 16px;
}

/* 
  van11y-accessible-hide-show-aria 
  https://van11y.net/accessible-hide-show/ 
   
  <h2 class="js-expandmore">Lorem dolor si amet</h2>
  <div class="js-to_expand">
    here the hidden content
  </div>
*/
.js-to_expand[aria-hidden=true],
.js-to_expand[data-hidden=true] {
  display: none;
}
.expandmore__button {
  background: none;
  font-size: inherit;
  color: inherit;
  border: none;
  padding: inherit;
  font-weight: inherit;
  font-family: inherit;
}
.expandmore__symbol::before {
  content: " ";
  background-image: url(/images/caret-right-solid.svg);
  display: inline-block;
  width: 14px;
  height: 1rem;
  background-repeat: no-repeat;
  margin-bottom: -0.1rem;
}
.expandmore__button[aria-expanded=true] > .expandmore__symbol::before {
  content: " ";
  background-image: url(/images/caret-down-solid.svg);
  display: inline-block;
  width: 14px;
  height: 1rem;
  background-repeat: no-repeat;
  margin-bottom: -0.1rem;
}
.expand-for-code {
  color: #808080;
  text-align: right;
  width: 100%;
  padding-bottom: 0.25em;
  margin: 0;
}
.expand-for-code > * > .expandmore__symbol::before {
  background: none;
  content: "+ Show ";
  width: auto;
  margin-right: 0.25em;
}
.expand-for-code > .expandmore__button[aria-expanded=true] > .expandmore__symbol::before {
  background: none;
  content: "- Hide ";
  width: auto;
  margin-right: 0.25em;
}

